tests/examples/good/misc/good008.lat
int main() {
    string a = "bb", b = "bb";
    if (a == b) {
        a = "ab";
        printString(a);
    }
    return 0;
}
