tests/examples/bad/invalid_type_division.lat
int main() {
    string a, b;
    b / a;
    return 1;
}